--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -14,6 +14,12 @@
     overflow-x: hidden !important;
 
     header {
+      .navbar{
+        background-color: $blue-darken !important;
+        ul{
+          padding-top: 32px;
+        }
+      }
       nav {
         .original {
           display: none !important;
@@ -136,61 +142,58 @@
   .inside-pages {
     overflow-y: scroll !important;
     overflow-x: hidden !important;
-    .navbar {
-      header {
-        .icon,
-        .original {
-          display: none !important;
-        }
-        .logo-inside-pages {
-          display: inline-flex !important;
-        }
-        .menu-items {
-          display: none;
-        }
-        .btn_menu {
-          display: inline-flex;
-          cursor: pointer;
-        }
-      }
-
-      .sidenav {
+    header {
+      .icon,
+      .original {
         display: none !important;
       }
-      .container-carrousel {
-        width: 100%;
-        height: 100%;
-        .carrousel {
-          padding-top: 0 !important;
-        }
-        .section {
-          width: 100%;
-          flex-direction: column !important;
-          .image-container {
-            width: 90% !important;
-            margin: auto;
-          }
-          .text-container {
-            width: 90% !important;
-            margin: auto;
-            padding: 20px 0 !important;
-          }
-          .portrait {
-            max-width: 80% !important;
-            margin: auto;
-            height: 100vh;
-            overflow: scroll !important;
-          }
+      .logo-inside-pages {
+        display: inline-flex !important;
+      }
+      .menu-items {
+        display: none;
+      }
+      .btn_menu {
+        display: inline-flex;
+        cursor: pointer;
+      }
+      .navbar{
+        background-color: $blue-light !important;
+        ul{
+          padding-top: 32px;
         }
       }
-      .container-cover {
-        width: 100%;
-        height: 100%;
-        .section {
-          flex-direction: column !important;
-          .image-container,
-          .text-container {
-            width: 90%;
+    }
+    
+    .sidenav {
+      display: none !important;
+    }
+    .container-carrousel {
+      width: 100%;
+      height: 100%;
+      .carrousel {
+        padding-top: 0 !important;
+      }
+      .section {
+        width: 100% !important;
+        flex-direction: column !important;
+        .image-container {
+          width: 100% !important;
+          margin: auto;
+        }
+        .text-container {
+          // width: 90% !important;
+          margin: auto;
+          padding: 20px 0 !important;
+        }
+        .portrait {
+          margin: auto 20px !important;
+          max-width: 100vw !important;
+          height: auto;
+          // overflow: scroll !important;
+          img {
+            width: 100% !important;
+            height: 100%;
           }
         }
       }
@@ -214,86 +217,110 @@
     .sidenav {
       display: none !important;
     }
-    main{
+    main {
       .container-cover {
-        overflow-y: scroll;
-        margin-top: 12vh !important;
-      }
-      .section{
-        flex-direction: column;
+        width: 100%;
         height: 100%;
-        .text-container, .image-container{
+        overflow-y: scroll;
+        .section {
+          width: 90%;
+          flex-direction: column !important;
+          .image-container,
+          .text-container {
+            width: 90%;
+          }
+        }
+
+        h1 {
+          padding-top: 10vh !important;
+        }
+      }
+      .section {
+        flex-direction: column;
+        justify-content: flex-start !important;
+        height: 100%;
+        .text-container {
+          width: 100% !important;
+          padding: 0 !important;
+          overflow: none !important;
+          p {
+            margin: 0 !important;
+          }
+        }
+        .image-container {
           width: 100% !important;
           padding: 40px 0 !important;
-          p{
-            margin: 0 !important
+          overflow: none !important;
+          p {
+            margin: 0 !important;
           }
         }
       }
     }
   }
+  
+}
 
-  @media screen and (max-width: 600px) {
-    .topnav {
-      .menu {
-        a {
-          display: none;
-        }
+/* TABLET */
+@media screen and (max-width: 600px) {
+  .topnav {
+    .menu {
+      a {
+        display: none;
+      }
+    }
+    a {
+      .icon {
+        float: right;
+        display: block;
+      }
+    }
+    .responsive {
+      position: relative;
+      .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
       }
       a {
-        .icon {
-          float: right;
-          display: block;
-        }
-      }
-      .responsive {
-        position: relative;
-        .icon {
-          position: absolute;
-          right: 0;
-          top: 0;
-        }
-        a {
-          float: none;
-          display: block;
-          text-align: left;
-        }
+        float: none;
+        display: block;
+        text-align: left;
       }
     }
   }
+}
 
-  /* MOBILE */
+/* MOBILE */
+@media screen and (max-width: 480px) {
+  p {
+    font-size: 16px;
+  }
+  h1 {
+    font-size: 30px !important ;
+  }
 
-  @media screen and (max-width: 480px) {
+  main {
+    margin: 0 20px;
+  }
+
+  .main-title {
+    text-align: center;
+    padding: 20px 0;
+  }
+
+  .routes {
+    transform: scale(0.5) rotate(90deg) !important;
     p {
-      font-size: 16px;
+      transform: scale(1.8) rotate(270deg) !important;
     }
-    h1 {
-      font-size: 30px !important ;
+    .vertical-line {
+      transform: scale(0.7);
     }
-
-    main {
-      margin: 0 20px;
-    }
-
-    .main-title {
-      text-align: center;
-      padding: 20px 0;
-    }
-
-    .routes {
-      transform: scale(0.5) rotate(90deg) !important;
-      p {
-        transform: scale(1.8) rotate(270deg) !important;
-      }
-      .vertical-line {
-        transform: scale(0.7);
-      }
-    }
-    /* 
+  }
+  /* 
   .full-width {
     height: 200px;
   }
  */
-  }
 }
